--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,18 +1,18 @@
 <Project>
     <PropertyGroup>
-        <VersionPrefix>2.12.0.4</VersionPrefix>
+        <VersionPrefix>0.0.0.1</VersionPrefix>
         <VersionSuffix>$(VersionSuffix)</VersionSuffix>
         <Authors>macula.io</Authors>
         <Company>DisComCo Sp.z.o.o</Company>
         <Copyright>Copyright (c)2019-2023 by DisComCo</Copyright>
         <TargetFramework>net7.0</TargetFramework>
         <SignAssembly>true</SignAssembly>
-        <AssemblyOriginatorKeyFile>../../dot-cart.snk</AssemblyOriginatorKeyFile>
+        <AssemblyOriginatorKeyFile>../../lemon-co.snk</AssemblyOriginatorKeyFile>
         <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
         <PackageIcon>discomco-favicon.png</PackageIcon>
         <PackageProjectUrl>https://github.com/discomco/dot-cart</PackageProjectUrl>
         <LangVersion>latest</LangVersion>
-        <RepositoryUrl>https://github.com/discomco/dot-cart</RepositoryUrl>
+        <RepositoryUrl>https://github.com/discomco/lemon-co</RepositoryUrl>
         <PackageProjectUrl>https://dotcart.io</PackageProjectUrl>
     </PropertyGroup>
     <ItemGroup>
